[gd_scene load_steps=4 format=2]

[ext_resource path="res://Indicator.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="SphereMesh" id=3]
radius = 0.1
height = 0.2

[node name="Indicator" type="StaticBody"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape" parent="."]

[node name="Mesh" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null
[connection signal="input_event" from="." to="." method="_on_Indicator_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Indicator_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Indicator_mouse_exited"]
